# iot-mock-app

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci_cd.yml
src/: Calculator.cpp  Calculator.hpp  main.cpp
test/: CMakeLists.txt  test.cpp
